--- a/style/Style.css
+++ b/style/Style.css
@@ -1,4 +1,14 @@
 /* reset code and common starts here */
+
+:root{
+    --primary-color: rgb(252, 182, 193);
+    --secondary-color: rgb(209, 170, 176);
+    --padding:0.5rem;
+    --transition: all 0.3rem;
+    --border-radius:0.6rem;
+    --box-shadow:0.1rem 0.2rem 0.8rem rgba(205,202,202,0.5)
+}
+
 *{
     box-sizing: border-box;
     list-style-type: none;
@@ -14,4 +24,78 @@ imf{
     width: 100%;
     height: auto;
 }
+.flex-space-around{
+  display: flex; 
+  justify-content: space-around;
+  align-items: center;
+}
 /* reset code and common end here */
+
+
+/* navbar starts here */
+nav{
+     font-family: fantasy; 
+    font-size: 1.2rem;
+
+    position: static;
+    top: 0;
+    left: 0;
+    z-index: 100;
+}
+.nav-upper{
+    min-height: 10vh;
+    background-color: var(--primary-color);
+    padding: 1rem 0;
+}
+.nav-list{
+    transition: var(--transition);
+}
+.nav-list:hover{
+    text-decoration: overline;
+    color: black;
+}
+.nav-link{
+    color: black;
+    transition: var(--transition);
+}
+.nav-link:hover{
+    color: rgb(119, 19, 19);
+
+}
+.profile-icon{
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50%;
+    border: white 1px solid;
+    filter: saturate(0);
+    transition: var(--transition);
+}
+.profile-icon:hover{
+    filter: saturate(1);
+}
+
+.nav-lower{
+    min-height: 10vh;
+    background-color: var(--secondary-color);
+    /* font-weight: bolder; */
+}
+.nav-brand{
+    font-size: 2rem;
+}
+/* navbar ends here */
+
+
+/* responsive */
+@media(max-width:992px){
+   .flex-space-around{
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1rem 0;
+   } 
+}
+@media(max-width:768px){
+
+}
+@media(max-width:600px){
+
+}
