--- a/style/Style.css
+++ b/style/Style.css
@@ -24,6 +24,11 @@ imf{
     width: 100%;
     height: auto;
 }
+.flex-center{
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+}
 .flex-space-around{
   display: flex; 
   justify-content: space-around;
@@ -40,10 +45,23 @@ imf{
 .btn:hover{
     background-color: var(--secondary-color);
 }
+.card{
+    box-shadow: var(--box-shadow);
+    border-radius: var(--border-radius);
+    transition: var(--transition);
+    padding: var(--padding);
+}
+.card:hover{
+    /* box-shadow: 0.1rem0.2rem 0.8rem rgb(114, 18, 32); */
+    background-color: rgb(240, 228, 232);  
+}
 /* reset code and common end here */
 
 
 /* navbar starts here */
+#menu-icon{
+    display: none;
+}
 nav{
      font-family: fantasy; 
     font-size: 1.2rem;
@@ -95,6 +113,115 @@ nav{
 }
 /* navbar ends here */
 
+/* header starts here */
+   .header{
+    padding: 4rem 0;
+    height: 80vh;
+    background: url(/image/background\ image.avif) no-repeat center;
+    background-attachment: fixed;
+    background-size: cover; 
+   }
+   .banner{
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+   }
+   .banner-title{
+    font-size: 4rem;
+    color: rgb(20, 230, 150);
+    padding: 1rem;
+    border-radius: var(--border-radius);
+   }
+   .features{
+    width: 100%;
+    /* margin-top: -3rem; */
+   }
+   .feature{
+    background-color: rgb(236, 233, 226);
+    color: rgb(20, 230, 150);
+    border-radius: var(--border-radius);
+    padding: 1rem;
+    width: 15rem;
+    flex-direction: column;
+    gap: 1rem;
+   }
+   .feature-icon{
+    font-size: 3rem;
+   }
+/* header ends here */
+
+
+/* main starts here */
+main{
+    padding: 4rem 0;
+    min-height: 80vh;
+}
+.sidebar{
+    flex: 1;
+    padding: var(--padding);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1rem;
+    align-self: flex-start;
+}
+.main-content{
+    flex: 3;
+    padding: var(--padding);
+}
+.actions_sort select{
+    padding: var(--padding);
+}
+.actions_search input{
+    width: 15rem;
+    padding: var(--padding);
+}
+.actions_search button{
+    margin-left: -0.3rem;
+    border: 1px solid;
+    padding: 0.55rem;
+}
+.products{
+    display: grid;
+    grid-template-columns: repeat(3,minmax(0,1fr));
+    gap: 2rem;
+    padding: 2rem 0;
+}
+.product{
+    position: relative;
+}
+.badge{
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: pink;
+    color: rgb(17, 14, 9);
+    padding: 4px 8px;
+    text-align: center;
+    border-radius: var(--border-radius);
+    z-index: 10; 
+}
+.product_img{
+      width: 100%;
+      height: 15rem;
+      filter: saturate(0);
+      transition: var(--transition);
+}
+.product_img:hover{
+      filter: saturate(1);
+}
+.product_body{
+    padding: var(--padding);
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+.learn-more{
+    color: rgb(228, 6, 180);
+}
+/* main ends here */
+
+
 /* footer starts here */
 .footer{
     padding: 1rem;
@@ -121,6 +248,18 @@ nav{
     gap: 1rem;
     padding: 1rem 0;
    } 
+   #menu-icon{
+    display: block;
+    text-align: center;
+    margin: 1rem 0;
+    cursor: pointer;
+   }
+   .hidden{
+    display: none;
+   }
+   .header{
+    height: 100vh;
+   }
 }
 @media(max-width:768px){
 
