--- a/style/Style.css
+++ b/style/Style.css
@@ -73,6 +73,12 @@ imf{
 .black{
     background-color: black;
 }
+.text-center{
+    text-align: centers;
+}
+.section-title{
+    font-size: 2rem;
+}
 /* reset code and common end here */
 
 
@@ -330,6 +336,44 @@ main{
     gap: 1rem;
 }
 
+/* register */
+.register{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 3rem; 
+    min-height: 60vh; 
+}
+.register .card{
+    width: 45rem;
+}
+.form{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+.form-control label{
+    flex: 0.1;
+    text-align: left;
+}
+.form-control input, textarea{
+    flex: 0.9rem;
+    padding: var(--padding);
+    border: 1px solid;
+    resize: none;
+}
+.form-control textarea{
+    resize: none;
+    height: 12vh;
+}
+.form-btn-field{
+    border-radius: var(--border-radius);
+}
+.contact-btn{
+    width: 30%;
+}
 /* main ends here */
 
 
