--- a/style/Style.css
+++ b/style/Style.css
@@ -141,7 +141,7 @@ nav{
    .header{
     padding: 4rem 0;
     height: 80vh;
-    background: url(/image/telivision.webp) no-repeat center;
+    background: url(/image/img.avif) no-repeat center;
     background-size: cover; 
    }
    .banner{
