--- a/style/Style.css
+++ b/style/Style.css
@@ -142,7 +142,7 @@ nav{
     padding: 4rem 0;
     height: 80vh;
     background-image: url("/image/img.avif");
-     /* background: url(/img.avif) no-repeat center;  */
+     /* background: url(/image/img.avif) no-repeat center;  */
     background-size: cover; 
    }
    .banner{
@@ -471,6 +471,17 @@ main{
    }
 }
 @media(max-width:768px){
+    .product_description{
+        padding: 0.1rem;
+        width: 100%;
+    }
+    .product_buttton{
+        width: 100%;
+    }
+    .product-details-left .img-product{
+        background-color: brown;
+        width: 100%;
+    }
    .flex-center{
         flex-direction: column;
         gap: 1rem;
